{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 101,
  "lineage": "da6f6f8c-e270-27b2-5a70-ac733d6b89d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c0f9ef2f505b609",
            "arn": "arn:aws:ec2:us-east-1:185409218150:instance/i-057a57980e2a26525",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057a57980e2a26525",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e5de27caaac2730",
            "private_dns": "ip-10-0-0-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.59",
            "public_dns": "ec2-54-89-245-121.compute-1.amazonaws.com",
            "public_ip": "54.89.245.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0475770ce54f9a3a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05880ae843abb2729",
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a324dfae505033b2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c0f9ef2f505b609",
            "arn": "arn:aws:ec2:us-east-1:185409218150:instance/i-09cdfab76de4fe4a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cdfab76de4fe4a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-065df43e845bd6d32",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-54-224-99-203.compute-1.amazonaws.com",
            "public_ip": "54.224.99.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0402e2f038d3a5262",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051f9ccb98df0a043",
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a324dfae505033b2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185409218150:internet-gateway/igw-0e5fceeb503ac44ab",
            "id": "igw-0e5fceeb503ac44ab",
            "owner_id": "185409218150",
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "vpc_id": "vpc-0a39d489facd4c1ae"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185409218150:loadbalancer/app/globo-web-alb/85c7e594566b070e",
            "arn_suffix": "app/globo-web-alb/85c7e594566b070e",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-225725134.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:185409218150:loadbalancer/app/globo-web-alb/85c7e594566b070e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0926077ad93006e66"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051f9ccb98df0a043"
              },
              {
                "subnet_id": "subnet-05880ae843abb2729"
              }
            ],
            "subnets": [
              "subnet-051f9ccb98df0a043",
              "subnet-05880ae843abb2729"
            ],
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "vpc_id": "vpc-0a39d489facd4c1ae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185409218150:listener/app/globo-web-alb/85c7e594566b070e/ff42f3b1aa3e426b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:185409218150:targetgroup/nginx-alb-tg/cb1a2440232fbf69",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185409218150:listener/app/globo-web-alb/85c7e594566b070e/ff42f3b1aa3e426b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:185409218150:loadbalancer/app/globo-web-alb/85c7e594566b070e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:185409218150:targetgroup/nginx-alb-tg/cb1a2440232fbf69",
            "arn_suffix": "targetgroup/nginx-alb-tg/cb1a2440232fbf69",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:185409218150:targetgroup/nginx-alb-tg/cb1a2440232fbf69",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a39d489facd4c1ae"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:185409218150:targetgroup/nginx-alb-tg/cb1a2440232fbf69-20240116210618326600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:185409218150:targetgroup/nginx-alb-tg/cb1a2440232fbf69",
            "target_id": "i-057a57980e2a26525"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:185409218150:targetgroup/nginx-alb-tg/cb1a2440232fbf69-20240116210522696300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:185409218150:targetgroup/nginx-alb-tg/cb1a2440232fbf69",
            "target_id": "i-09cdfab76de4fe4a1"
          },
          "dependencies": [
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185409218150:route-table/rtb-094ecfc7360651d22",
            "id": "rtb-094ecfc7360651d22",
            "owner_id": "185409218150",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5fceeb503ac44ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a39d489facd4c1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f0a77687eaca51d",
            "route_table_id": "rtb-094ecfc7360651d22",
            "subnet_id": "subnet-05880ae843abb2729"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02722e4785e43dd5b",
            "route_table_id": "rtb-094ecfc7360651d22",
            "subnet_id": "subnet-051f9ccb98df0a043"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185409218150:security-group/sg-0926077ad93006e66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0926077ad93006e66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "185409218150",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a39d489facd4c1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185409218150:security-group/sg-0a324dfae505033b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a324dfae505033b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "185409218150",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "billing_code": "",
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a39d489facd4c1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185409218150:subnet/subnet-05880ae843abb2729",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05880ae843abb2729",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185409218150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "vpc_id": "vpc-0a39d489facd4c1ae"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185409218150:subnet/subnet-051f9ccb98df0a043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051f9ccb98df0a043",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "185409218150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "vpc_id": "vpc-0a39d489facd4c1ae"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185409218150:vpc/vpc-0a39d489facd4c1ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a16e9e0fff73193f",
            "default_route_table_id": "rtb-048a65bdddf59d6f7",
            "default_security_group_id": "sg-06e6d85b65036dc10",
            "dhcp_options_id": "dopt-aff46fd5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a39d489facd4c1ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048a65bdddf59d6f7",
            "owner_id": "185409218150",
            "tags": {
              "company": "Globomantics",
              "project": "Globomantics-"
            },
            "tags_all": {
              "company": "Globomantics",
              "project": "Globomantics-"
            }
          }
        }
      ]
    }
  ]
}